camel-main/rest-oauth/src/main/jkube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: rest-oauth
    app.kubernetes.io/runtime: camel
  name: rest-oauth
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: rest-oauth
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rest-oauth
    spec:
      containers:
      - env:
        - name: SSL_TRUSTSTORE_CERTIFICATES
          value: tls/cluster.crt
        name: rest-oauth
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
