camel-main/rest-oauth/src/main/jkube/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: rest-oauth
    app.kubernetes.io/runtime: camel
  name: rest-oauth
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: rest-oauth
  type: ClusterIP
